--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png"> <!-- 180×180 -->
   <link rel="manifest" href="manifest.webmanifest">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
@@ -66,6 +66,9 @@
               <p class="item-advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
             <picture>
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/cafe-desktop@1x.webp 1x, img/cafe-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/cafe-tablet@1x.webp 1x, img/cafe-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="/img/cafe-phone@1x.webp 1x, img/cafe-phone@2x.webp 2x">
               <source media="(min-width: 1200px)" srcset="img/cafe-desktop@1x.jpg 1x, img/cafe-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/cafe-tablet@1x.jpg 1x, img/cafe-tablet@2x.jpg 2x">
               <img class="item-advantages__image" src="/img/cafe-phone@1x.jpg" srcset="img/cafe-phone@2x.jpg 2x" width="100%" height="auto" alt="Кафе в Седоне.">
