--- a/source/index.html
+++ b/source/index.html
@@ -29,12 +29,12 @@
             </a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="catalog.html" target="_blank">
+            <a class="navigation__link" href="catalog.html">
               Фото и видео
             </a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="form.html" target="_blank">
+            <a class="navigation__link" href="form.html">
               Форма отзыва
             </a>
           </li>
