--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,6 +9,11 @@
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png"> <!-- 180×180 -->
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preload" href="css/style.min.css" as="style">
+  <link rel="preload" href="js/script.js" as="script">
+  <link rel="preload" href="img/inner-hero-background.jpg" as="image">
+  <link rel="preload" href="img/inner-hero-background@2x.jpg" as="image">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
 
