some error about file

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,7 +21,7 @@
   <div class="page__wrapper">
     <header class="header">
       <a class="header__logo">
-        <img class="header__logo-image" src="/img/logo-sedona.svg" width="185" height="96" alt="Логотип «Седона».">
+        <img class="header__logo-image" src="img/logo-sedona.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
       <nav class="navigation navigation--closed navigation--nojs">
         <button class="navigation__toggle" type="button">
@@ -54,7 +54,7 @@
     <main class="main-container">
       <section class="hero">
         <div class="hero__wrapper hero__wrapper--inner">
-          <img class="hero__image--inner" src="/img/text-sedona.svg" width="100%" height="auto" alt="Седона.">
+          <img class="hero__image--inner" src="img/text-sedona.svg" width="100%" height="auto" alt="Седона.">
         </div>
         <div class="hero__title-wrapper">
           <h1 class="hero__title">Фото и видео</h1>
@@ -66,9 +66,9 @@
         <ul class="gallery__list">
           <li class="gallery__item gallery__item--header item-gallery">
             <picture>
-              <source media="(min-width: 1200px)" srcset="/img/gallery/photo-1-desktop@1x.jpg 1x, img/gallery/photo-1-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="/img/gallery/photo-1-tablet@1x.jpg 1x, img/gallery/photo-1-tablet@2x.jpg 2x">
-              <img class="item-gallery__image item-gallery__image--first" src="/img/gallery/photo-1-phone@1x.jpg" srcset="img/gallery/photo-1-phone@2x.jpg 2x" width="100%" height="auto" alt="Дорога и закат.">
+              <source media="(min-width: 1200px)" srcset="img/gallery/photo-1-desktop@1x.jpg 1x, img/gallery/photo-1-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/gallery/photo-1-tablet@1x.jpg 1x, img/gallery/photo-1-tablet@2x.jpg 2x">
+              <img class="item-gallery__image item-gallery__image--first" src="img/gallery/photo-1-phone@1x.jpg" srcset="img/gallery/photo-1-phone@2x.jpg 2x" width="100%" height="auto" alt="Дорога и закат.">
             </picture>
             <div class="item-gallery__wrapper">
               <div class="item-gallery__title-wrapper">
@@ -84,9 +84,9 @@
           </li>
           <li class="gallery__item item-gallery">
             <picture>
-              <source media="(min-width: 1200px)" srcset="/img/gallery/photo-2-desktop@1x.jpg 1x, img/gallery/photo-2-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="/img/gallery/photo-2-tablet@1x.jpg 1x, img/gallery/photo-2-tablet@2x.jpg 2x">
-              <img class="item-gallery__image" src="/img/gallery/photo-2-phone@1x.jpg" srcset="img/gallery/photo-2-phone@2x.jpg 2x" width="100%" height="auto" alt="Растения Седоны.">
+              <source media="(min-width: 1200px)" srcset="img/gallery/photo-2-desktop@1x.jpg 1x, img/gallery/photo-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/gallery/photo-2-tablet@1x.jpg 1x, img/gallery/photo-2-tablet@2x.jpg 2x">
+              <img class="item-gallery__image" src="img/gallery/photo-2-phone@1x.jpg" srcset="img/gallery/photo-2-phone@2x.jpg 2x" width="100%" height="auto" alt="Растения Седоны.">
             </picture>
             <div class="item-gallery__wrapper">
               <div class="item-gallery__title-wrapper">
@@ -102,9 +102,9 @@
           </li>
           <li class="gallery__item item-gallery">
             <picture>
-              <source media="(min-width: 1200px)" srcset="/img/gallery/photo-3-desktop@1x.jpg 1x, img/gallery/photo-3-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="/img/gallery/photo-3-tablet@1x.jpg 1x, img/gallery/photo-3-tablet@2x.jpg 2x">
-              <img class="item-gallery__image" src="/img/gallery/photo-3-phone@1x.jpg" srcset="img/gallery/photo-3-phone@2x.jpg 2x" width="100%" height="auto" alt="Дорога в горах.">
+              <source media="(min-width: 1200px)" srcset="img/gallery/photo-3-desktop@1x.jpg 1x, img/gallery/photo-3-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/gallery/photo-3-tablet@1x.jpg 1x, img/gallery/photo-3-tablet@2x.jpg 2x">
+              <img class="item-gallery__image" src="img/gallery/photo-3-phone@1x.jpg" srcset="img/gallery/photo-3-phone@2x.jpg 2x" width="100%" height="auto" alt="Дорога в горах.">
             </picture>
             <div class="item-gallery__wrapper">
               <div class="item-gallery__title-wrapper">
@@ -120,9 +120,9 @@
           </li>
           <li class="gallery__item item-gallery">
             <picture>
-              <source media="(min-width: 1200px)" srcset="/img/gallery/photo-4-desktop@1x.jpg 1x, img/gallery/photo-4-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="/img/gallery/photo-4-tablet@1x.jpg 1x, img/gallery/photo-4-tablet@2x.jpg 2x">
-              <img class="item-gallery__image" src="/img/gallery/photo-4-phone@1x.jpg" srcset="img/gallery/photo-4-phone@2x.jpg 2x" width="100%" height="auto" alt="Каньон Седоны.">
+              <source media="(min-width: 1200px)" srcset="img/gallery/photo-4-desktop@1x.jpg 1x, img/gallery/photo-4-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/gallery/photo-4-tablet@1x.jpg 1x, img/gallery/photo-4-tablet@2x.jpg 2x">
+              <img class="item-gallery__image" src="img/gallery/photo-4-phone@1x.jpg" srcset="img/gallery/photo-4-phone@2x.jpg 2x" width="100%" height="auto" alt="Каньон Седоны.">
             </picture>
             <div class="item-gallery__wrapper">
               <div class="item-gallery__title-wrapper">
@@ -177,12 +177,12 @@
       <div class="footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__logo">
-          <img class="copyright__logo-image" src="/img/htmlacademy-logo.svg" width="27" height="34" alt="Логотип HTML Academy.">
+          <img class="copyright__logo-image" src="img/htmlacademy-logo.svg" width="27" height="34" alt="Логотип HTML Academy.">
         </a>
       </div>
     </footer>
   </div>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
