--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
   <div class="page__wrapper">
     <header class="header">
       <a class="header__logo">
-        <img class="header__logo-image" src="/img/logo-sedona.svg" width="185" height="96" alt="Логотип «Седона».">
+        <img class="header__logo-image" src="img/logo-sedona.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
       <nav class="navigation navigation--closed navigation--nojs">
         <div class="navigation__toggle-wrapper">
@@ -56,7 +56,7 @@
     <main class="main-container">
       <section class="hero">
         <div class="hero__wrapper hero__wrapper--inner">
-          <img class="hero__image--inner" src="/img/text-sedona.svg" width="100%" height="auto" alt="Седона.">
+          <img class="hero__image--inner" src="img/text-sedona.svg" width="100%" height="auto" alt="Седона.">
         </div>
         <div class="hero__title-wrapper hero__title-wrapper--reviews">
           <h1 class="hero__title hero__title--reviews">Оставьте свой отзыв</h1>
@@ -199,7 +199,7 @@
       <div class="footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__logo">
-          <img class="copyright__logo-image" src="/img/htmlacademy-logo.svg" width="27" height="34" alt="Логотип HTML Academy.">
+          <img class="copyright__logo-image" src="img/htmlacademy-logo.svg" width="27" height="34" alt="Логотип HTML Academy.">
         </a>
       </div>
     </footer>
@@ -217,7 +217,7 @@
       </div>
     </div>
   </div>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
