--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
   <div class="page__wrapper">
     <header class="header">
       <a class="header__logo">
-        <img class="header__logo-image" src="/img/logo-sedona.svg" width="185" height="96" alt="Логотип «Седона».">
+        <img class="header__logo-image" src="img/logo-sedona.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
       <nav class="navigation navigation--closed navigation--nojs">
         <button class="navigation__toggle" type="button">
@@ -55,7 +55,7 @@
       <section class="hero">
         <div class="hero__wrapper">
           <h1 class="visually-hidden">Отдых в городке Седона.</h1>
-          <img class="hero__image" src="/img/index-welcome.svg" width="100%" height="auto" alt="Добро пожаловать в великолепную Седону.">
+          <img class="hero__image" src="img/index-welcome.svg" width="100%" height="auto" alt="Добро пожаловать в великолепную Седону.">
         </div>
       </section>
       <section class="advantages">
@@ -76,7 +76,7 @@
               <source type="image/webp" srcset="/img/cafe-phone@1x.webp 1x, img/cafe-phone@2x.webp 2x">
               <source media="(min-width: 1200px)" srcset="img/cafe-desktop@1x.jpg 1x, img/cafe-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/cafe-tablet@1x.jpg 1x, img/cafe-tablet@2x.jpg 2x">
-              <img class="item-advantages__image" src="/img/cafe-phone@1x.jpg" srcset="img/cafe-phone@2x.jpg 2x" width="100%" height="auto" alt="Кафе в Седоне.">
+              <img class="item-advantages__image" src="img/cafe-phone@1x.jpg" srcset="img/cafe-phone@2x.jpg 2x" width="100%" height="auto" alt="Кафе в Седоне.">
             </picture>
           </li>
           <li class="advantages__item">
@@ -102,7 +102,7 @@
             <picture>
               <source media="(min-width: 1200px)" srcset="img/canyon-desktop@1x.jpg 1x, img/canyon-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/canyon-tablet@1x.jpg 1x, img/canyon-tablet@2x.jpg 2x">
-              <img class="item-advantages__image" src="/img/canyon-phone@1x.jpg" srcset="img/canyon-phone@2x.jpg 2x" width="100%" height="auto" alt="Каньон в Седоне.">
+              <img class="item-advantages__image" src="img/canyon-phone@1x.jpg" srcset="img/canyon-phone@2x.jpg 2x" width="100%" height="auto" alt="Каньон в Седоне.">
             </picture>
             <div class="item-advantages__wrapper item-advantages__wrapper--with-img ">
               <h3 class="item-advantages__title item-advantages__title--light">Там есть <br>мост дьявола</h3>
@@ -141,7 +141,7 @@
       </section>
       <section class="map">
         <h2 class="visually-hidden">Местоположение Седоны на карте.</h2>
-        <img class="map__image" src="/img/map@1x.png" width="100%" height="auto" srcset="img/map@2x.png 2x" alt="Карта с местоположением Седоны в штате Аризона.">
+        <img class="map__image" src="img/map@1x.png" width="100%" height="auto" srcset="img/map@2x.png 2x" alt="Карта с местоположением Седоны в штате Аризона.">
       </section>
     </main>
     <footer class="footer">
@@ -173,7 +173,7 @@
       <div class="footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
         <a class="copyright__logo">
-          <img class="copyright__logo-image" src="/img/htmlacademy-logo.svg" width="27" height="34" alt="Логотип HTML Academy.">
+          <img class="copyright__logo-image" src="img/htmlacademy-logo.svg" width="27" height="34" alt="Логотип HTML Academy.">
         </a>
       </div>
     </footer>
