--- a/source/index.html
+++ b/source/index.html
@@ -73,7 +73,7 @@
             <picture>
               <source type="image/webp" media="(min-width: 1200px)" srcset="img/cafe-desktop@1x.webp 1x, img/cafe-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/cafe-tablet@1x.webp 1x, img/cafe-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="/img/cafe-phone@1x.webp 1x, img/cafe-phone@2x.webp 2x">
+              <source type="image/webp" srcset="img/cafe-phone@1x.webp 1x, img/cafe-phone@2x.webp 2x">
               <source media="(min-width: 1200px)" srcset="img/cafe-desktop@1x.jpg 1x, img/cafe-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)" srcset="img/cafe-tablet@1x.jpg 1x, img/cafe-tablet@2x.jpg 2x">
               <img class="item-advantages__image" src="img/cafe-phone@1x.jpg" srcset="img/cafe-phone@2x.jpg 2x" width="100%" height="auto" alt="Кафе в Седоне.">
