--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,11 +15,10 @@
   <link rel="preload" href="fonts/ptsans.woff2" as="font">
   <link href="css/style.min.css" rel="stylesheet">
 </head>
-
 <body class="page__body">
   <div class="page__wrapper">
     <header class="header">
-      <a class="header__logo">
+      <a class="header__logo" href="index.html" target="_blank">
         <img class="header__logo-image" src="img/logo-sedona.svg" width="185" height="96" alt="Логотип «Седона».">
       </a>
       <nav class="navigation navigation--closed navigation--nojs">
@@ -33,8 +31,8 @@
               Главная
             </a>
           </li>
-          <li class="navigation__item navigation__item--current">
-            <a class="navigation__link" href="catalog.html">
+          <li class="navigation__item">
+            <a class="navigation__link navigation__link--current" href="catalog.html">
               Фото и видео
             </a>
           </li>
@@ -44,7 +42,7 @@
             </a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="https://htmlacademy.ru/" target="_blank">
+            <a class="navigation__link" href="https://htmlacademy.ru/">
               HTML ACADEMY
             </a>
           </li>
@@ -54,7 +52,7 @@
     <main class="main-container">
       <section class="hero">
         <div class="hero__wrapper hero__wrapper--inner">
-          <img class="hero__image--inner" src="img/text-sedona.svg" width="100%" height="auto" alt="Седона.">
+          <img class="hero__image-inner" src="img/text-sedona.svg" width="229" height="39" alt="Седона.">
         </div>
         <div class="hero__title-wrapper">
           <h1 class="hero__title">Фото и видео</h1>
@@ -65,12 +63,14 @@
         <h2 class="visually-hidden">Фотогалерея Седоны.</h2>
         <ul class="gallery__list">
           <li class="gallery__item gallery__item--header item-gallery">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/gallery/photo-1-desktop@1x.jpg 1x, img/gallery/photo-1-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/gallery/photo-1-tablet@1x.jpg 1x, img/gallery/photo-1-tablet@2x.jpg 2x">
-              <img class="item-gallery__image item-gallery__image--first" src="img/gallery/photo-1-phone@1x.jpg" srcset="img/gallery/photo-1-phone@2x.jpg 2x" width="100%" height="auto" alt="Дорога и закат.">
-            </picture>
-            <div class="item-gallery__wrapper">
+            <a class="item-gallery__link" href="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-1-desktop@1x.webp 1x, img/gallery/photo-1-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-1-tablet@1x.webp 1x, img/gallery/photo-1-tablet@2x.webp 2x">
+                <img class="item-gallery__image item-gallery__image--first" src="/img/gallery/photo-1-phone@1x.webp" srcset="img/gallery/photo-1-phone@2x.webp 2x" width="280" height="280" alt="Дорога и закат.">
+              </picture>
+            </a>
+            <div class="item-gallery__wrapper item-gallery__wrapper--header">
               <div class="item-gallery__title-wrapper">
                 <h3 class="item-gallery__title">Неродные просторы</h3>
                 <p class="item-gallery__author">Автор фото: Борис</p>
@@ -83,11 +83,13 @@
             </div>
           </li>
           <li class="gallery__item item-gallery">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/gallery/photo-2-desktop@1x.jpg 1x, img/gallery/photo-2-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/gallery/photo-2-tablet@1x.jpg 1x, img/gallery/photo-2-tablet@2x.jpg 2x">
-              <img class="item-gallery__image" src="img/gallery/photo-2-phone@1x.jpg" srcset="img/gallery/photo-2-phone@2x.jpg 2x" width="100%" height="auto" alt="Растения Седоны.">
-            </picture>
+            <a class="item-gallery__link" href="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-2-desktop@1x.webp 1x, img/gallery/photo-2-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-2-tablet@1x.webp 1x, img/gallery/photo-2-tablet@2x.webp 2x">
+                <img class="item-gallery__image item-gallery__image--second" src="/img/gallery/photo-2-phone@1x.webp" srcset="img/gallery/photo-2-phone@2x.webp 2x" width="280" height="280" alt="Растения Седоны.">
+              </picture>
+            </a>
             <div class="item-gallery__wrapper">
               <div class="item-gallery__title-wrapper">
                 <h3 class="item-gallery__title">Местная растительность</h3>
@@ -101,11 +103,13 @@
             </div>
           </li>
           <li class="gallery__item item-gallery">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/gallery/photo-3-desktop@1x.jpg 1x, img/gallery/photo-3-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/gallery/photo-3-tablet@1x.jpg 1x, img/gallery/photo-3-tablet@2x.jpg 2x">
-              <img class="item-gallery__image" src="img/gallery/photo-3-phone@1x.jpg" srcset="img/gallery/photo-3-phone@2x.jpg 2x" width="100%" height="auto" alt="Дорога в горах.">
-            </picture>
+            <a class="item-gallery__link" href="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-3-desktop@1x.webp 1x, img/gallery/photo-3-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-3-tablet@1x.webp 1x, img/gallery/photo-3-tablet@2x.webp 2x">
+                <img class="item-gallery__image item-gallery__image--third" src="/img/gallery/photo-3-phone@1x.webp" srcset="img/gallery/photo-3-phone@2x.webp 2x" width="280" height="280" alt="Дорога в горах.">
+              </picture>
+            </a>
             <div class="item-gallery__wrapper">
               <div class="item-gallery__title-wrapper">
                 <h3 class="item-gallery__title">Дорога на север</h3>
@@ -119,11 +123,13 @@
             </div>
           </li>
           <li class="gallery__item item-gallery">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/gallery/photo-4-desktop@1x.jpg 1x, img/gallery/photo-4-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="img/gallery/photo-4-tablet@1x.jpg 1x, img/gallery/photo-4-tablet@2x.jpg 2x">
-              <img class="item-gallery__image" src="img/gallery/photo-4-phone@1x.jpg" srcset="img/gallery/photo-4-phone@2x.jpg 2x" width="100%" height="auto" alt="Каньон Седоны.">
-            </picture>
+            <a class="item-gallery__link" href="#">
+              <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-4-desktop@1x.webp 1x, img/gallery/photo-4-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-4-tablet@1x.webp 1x, img/gallery/photo-4-tablet@2x.webp 2x">
+                <img class="item-gallery__image item-gallery__image--fourth" src="/img/gallery/photo-4-phone@1x.webp" srcset="img/gallery/photo-4-phone@2x.webp 2x" width="280" height="280" alt="Каньон Седоны.">
+              </picture>
+            </a>
             <div class="item-gallery__wrapper">
               <div class="item-gallery__title-wrapper">
                 <h3 class="item-gallery__title">Мост дьявола</h3>
@@ -144,8 +150,7 @@
           <p class="video__title">Все еще сомневаетесь?</p>
           <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         </div>
-        <video class="video__play" width="100%" height="auto">
-        </video>
+        <video class="video__play" width="280" height="177"></video>
       </section>
     </main>
     <footer class="footer">
@@ -158,17 +163,17 @@
       <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--vkontakte button" href="https://vk.com/htmlacademy" target="_blank">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy" target="_blank">
               <span class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--telegram button" href="https://t.me/htmlacademy" target="_blank">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy" target="_blank">
               <span class="visually-hidden">Telegram</span>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
               <span class="visually-hidden">Youtube</span>
             </a>
           </li>
@@ -176,13 +181,27 @@
       </div>
       <div class="footer__copyright copyright">
         <span class="copyright__text">Разработано</span>
-        <a class="copyright__logo">
-          <img class="copyright__logo-image" src="img/htmlacademy-logo.svg" width="27" height="34" alt="Логотип HTML Academy.">
+        <a class="copyright__logo" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+          <svg class="copyright__logo-image" width="27" height="34" xmlns="http://www.w3.org/2000/svg">
+            <path d="M13.65 0.449951H13.55L0.0500031 1.84995V26.55L13.55 34.5499L26.95 26.55V1.84995L13.65 0.449951ZM25.05 12.55L13.55 5.74995V5.64995H13.45L13.35 5.54995V5.64995L1.95 12.55V3.54995L13.45 2.34995L25.05 3.54995V12.55ZM13.45 7.24995L24.95 13.95L20.45 16.55L13.35 12.35V13.75L19.25 17.25L18.35 17.75L13.35 14.75V16.15L17.15 18.45L16.35 18.95L13.35 17.15V18.55L15.25 19.65L13.45 20.75L2.05 14.05L13.45 7.24995ZM1.95 15.55L13.35 22.35V23.35L5.45 18.65V20.05L13.45 24.85V25.95L5.45 21.25V22.65L13.45 27.45L21.55 22.55V17.35L24.95 15.35V25.35L13.45 32.25L1.95 25.45V15.55Z" />
+          </svg>
         </a>
       </div>
     </footer>
+    <!--Popup-->
+    <div class="popup-wrapper popup-wrapper--close">
+      <div class="popup">
+        <button class="popup__button" type="button">
+          <span class="visually-hidden">Закрыть окно.</span>
+        </button>
+        <picture>
+          <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-1-desktop@1x.webp 1x, img/gallery/photo-1-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-1-tablet@1x.webp 1x, img/gallery/photo-1-tablet@2x.webp 2x">
+          <img class="popup__image" src="/img/gallery/photo-1-phone@1x.webp" srcset="img/gallery/photo-1-phone@2x.webp 2x" width="320" height="320" alt="Дорога и закат.">
+        </picture>
+      </div>
+    </div>
   </div>
-  <script src="js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
-
 </html>
