ошибка относительных путей

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -65,9 +65,9 @@
           <li class="gallery__item gallery__item--header item-gallery">
             <a class="item-gallery__link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-1-desktop@1x.webp 1x, img/gallery/photo-1-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/gallery/photo-1-desktop@1x.webp 1x, img/gallery/photo-1-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-1-tablet@1x.webp 1x, img/gallery/photo-1-tablet@2x.webp 2x">
-                <img class="item-gallery__image item-gallery__image--first" src="/img/gallery/photo-1-phone@1x.webp" srcset="img/gallery/photo-1-phone@2x.webp 2x" width="280" height="280" alt="Дорога и закат.">
+                <img class="item-gallery__image item-gallery__image--first" src="img/gallery/photo-1-phone@1x.webp" srcset="img/gallery/photo-1-phone@2x.webp 2x" width="280" height="280" alt="Дорога и закат.">
               </picture>
             </a>
             <div class="item-gallery__wrapper item-gallery__wrapper--header">
@@ -85,9 +85,9 @@
           <li class="gallery__item item-gallery">
             <a class="item-gallery__link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-2-desktop@1x.webp 1x, img/gallery/photo-2-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-2-tablet@1x.webp 1x, img/gallery/photo-2-tablet@2x.webp 2x">
-                <img class="item-gallery__image item-gallery__image--second" src="/img/gallery/photo-2-phone@1x.webp" srcset="img/gallery/photo-2-phone@2x.webp 2x" width="280" height="280" alt="Растения Седоны.">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/gallery/photo-2-desktop@1x.webp 1x, img/gallery/photo-2-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/gallery/photo-2-tablet@1x.webp 1x, img/gallery/photo-2-tablet@2x.webp 2x">
+                <img class="item-gallery__image item-gallery__image--second" src="img/gallery/photo-2-phone@1x.webp" srcset="img/gallery/photo-2-phone@2x.webp 2x" width="280" height="280" alt="Растения Седоны.">
               </picture>
             </a>
             <div class="item-gallery__wrapper">
@@ -105,9 +105,9 @@
           <li class="gallery__item item-gallery">
             <a class="item-gallery__link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-3-desktop@1x.webp 1x, img/gallery/photo-3-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-3-tablet@1x.webp 1x, img/gallery/photo-3-tablet@2x.webp 2x">
-                <img class="item-gallery__image item-gallery__image--third" src="/img/gallery/photo-3-phone@1x.webp" srcset="img/gallery/photo-3-phone@2x.webp 2x" width="280" height="280" alt="Дорога в горах.">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/gallery/photo-3-desktop@1x.webp 1x, img/gallery/photo-3-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/gallery/photo-3-tablet@1x.webp 1x, img/gallery/photo-3-tablet@2x.webp 2x">
+                <img class="item-gallery__image item-gallery__image--third" src="img/gallery/photo-3-phone@1x.webp" srcset="img/gallery/photo-3-phone@2x.webp 2x" width="280" height="280" alt="Дорога в горах.">
               </picture>
             </a>
             <div class="item-gallery__wrapper">
@@ -125,9 +125,9 @@
           <li class="gallery__item item-gallery">
             <a class="item-gallery__link" href="#">
               <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-4-desktop@1x.webp 1x, img/gallery/photo-4-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-4-tablet@1x.webp 1x, img/gallery/photo-4-tablet@2x.webp 2x">
-                <img class="item-gallery__image item-gallery__image--fourth" src="/img/gallery/photo-4-phone@1x.webp" srcset="img/gallery/photo-4-phone@2x.webp 2x" width="280" height="280" alt="Каньон Седоны.">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/gallery/photo-4-desktop@1x.webp 1x, img/gallery/photo-4-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/gallery/photo-4-tablet@1x.webp 1x, img/gallery/photo-4-tablet@2x.webp 2x">
+                <img class="item-gallery__image item-gallery__image--fourth" src="img/gallery/photo-4-phone@1x.webp" srcset="img/gallery/photo-4-phone@2x.webp 2x" width="280" height="280" alt="Каньон Седоны.">
               </picture>
             </a>
             <div class="item-gallery__wrapper">
@@ -195,13 +195,13 @@
           <span class="visually-hidden">Закрыть окно.</span>
         </button>
         <picture>
-          <source type="image/webp" media="(min-width: 1200px)" srcset="/img/gallery/photo-1-desktop@1x.webp 1x, img/gallery/photo-1-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="/img/gallery/photo-1-tablet@1x.webp 1x, img/gallery/photo-1-tablet@2x.webp 2x">
-          <img class="popup__image" src="/img/gallery/photo-1-phone@1x.webp" srcset="img/gallery/photo-1-phone@2x.webp 2x" width="320" height="320" alt="Дорога и закат.">
+          <source type="image/webp" media="(min-width: 1200px)" srcset="img/gallery/photo-1-desktop@1x.webp 1x, img/gallery/photo-1-desktop@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 768px)" srcset="img/gallery/photo-1-tablet@1x.webp 1x, img/gallery/photo-1-tablet@2x.webp 2x">
+          <img class="popup__image" src="img/gallery/photo-1-phone@1x.webp" srcset="img/gallery/photo-1-phone@2x.webp 2x" width="320" height="320" alt="Дорога и закат.">
         </picture>
       </div>
     </div>
   </div>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
