--- a/source/index.html
+++ b/source/index.html
@@ -71,7 +71,7 @@
             <picture>
               <source type="image/webp" media="(min-width: 1200px)" srcset="img/cafe-desktop@1x.webp 1x, img/cafe-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/cafe-tablet@1x.webp 1x, img/cafe-tablet@2x.webp 2x">
-              <img class="item-advantages__image" src="/img/cafe-phone@1x.webp" srcset="img/cafe-phone@2x.webp 2x" width="320" height="260" alt="Кафе в Седоне.">
+              <img class="item-advantages__image" src="img/cafe-phone@1x.webp" srcset="img/cafe-phone@2x.webp 2x" width="320" height="260" alt="Кафе в Седоне.">
             </picture>
           </li>
           <li class="advantages__item">
@@ -97,7 +97,7 @@
             <picture>
               <source type="image/webp" media="(min-width: 1200px)" srcset="img/canyon-desktop@1x.webp 1x, img/canyon-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)" srcset="img/canyon-tablet@1x.webp 1x, img/canyon-tablet@2x.webp 2x">
-              <img class="item-advantages__image" src="/img/canyon-phone@1x.webp" srcset="img/canyon-phone@2x.webp 2x" width="320" height="260" alt="Каньон в Седоне.">
+              <img class="item-advantages__image" src="img/canyon-phone@1x.webp" srcset="img/canyon-phone@2x.webp 2x" width="320" height="260" alt="Каньон в Седоне.">
             </picture>
             <div class="item-advantages__wrapper item-advantages__wrapper--with-img ">
               <h3 class="item-advantages__title item-advantages__title--light">Там есть мост&nbsp;дьявола</h3>
@@ -141,7 +141,7 @@
           <picture>
             <source type="image/webp" media="(min-width: 1200px)" srcset="img/map-desktop@1x.webp 1x, img/map-desktop@2x.webp 2x">
             <source type="image/webp" media="(min-width: 768px)" srcset="img/map-tablet@1x.webp 1x, img/map-tablet@2x.webp 2x">
-            <img class="map__image" src="/img/map-phone@1x.webp" srcset="img/map-phone@2x.webp 2x" width="320" height="350" alt="Седона на карте." loading="lazy">
+            <img class="map__image" src="img/map-phone@1x.webp" srcset="img/map-phone@2x.webp 2x" width="320" height="350" alt="Седона на карте." loading="lazy">
           </picture>
         </noscript>
       </section>
@@ -182,6 +182,6 @@
       </div>
     </footer>
   </div>
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
